Add remainGoodsReport snapshot cache for contactlenses
